crates/lang/macro/tests/ui/contract/fail/constructor-abi.stderr
error: ink! constructors must have explicit ABI
  --> $DIR/constructor-abi.rs:10:13
   |
10 |         pub extern "C" fn constructor() -> Self {
   |             ^^^^^^^^^^
